--- a/crates/hyperswitch_interfaces/Cargo.toml
+++ b/crates/hyperswitch_interfaces/Cargo.toml
@@ -31,3 +31,4 @@ masking = { version = "0.1.0", path = "../masking" }
 router_derive = { version = "0.1.0", path = "../router_derive" }
 router_env = { version = "0.1.0", path = "../router_env" }
 storage_impl = { version = "0.1.0", path = "../storage_impl", default-features = false }
+diesel_models = { version = "0.1.0", path = "../diesel_models", features = ["kv_store"] }
