made the commented changes

--- a/config/docker_compose.toml
+++ b/config/docker_compose.toml
@@ -4,7 +4,7 @@ host = "0.0.0.0"
 request_body_limit = 16_384 # Post request body is limited to 16k.
 
 [log.file]
-enabled = true # Whether you want to store log in log files.
+enabled = false # Whether you want to store log in log files.
 path = "logs"   # Where to store log files.
 level = "DEBUG" # What gets into log files.
 # rotation = "60"           # mins # current framework doesn't support configuring rotation. set to hourly rotation.
