refactor: wasm changes, string error handling

--- a/crates/connector_configs/toml/development.toml
+++ b/crates/connector_configs/toml/development.toml
@@ -1170,6 +1170,15 @@ api_key="key"
 brand_id="Brand ID"
 destination_account_number="Destination Account Number"
 
+[razorpay]
+[razorpay.upi]
+  payment_method_type = "upiCollect"
+[razorpay.connector_auth.MultiAuthKey]
+api_key="API Key"
+key1 = "Merchant id"
+api_secret = "Razorpay Id"
+key2 = "Razorpay Secret"
+
 [mollie]
 [[mollie.credit]]
   payment_method_type = "Mastercard"
