feat(events): Add payment metadata to hyperswitch-payment-intent-events (#5170)
Co-authored-by: Narayan Bhat <48803246+Narayanbhat166@users.noreply.github.com>
Co-authored-by: Sampras Lopes <Sampras.lopes@juspay.in>
Co-authored-by: hyperswitch-bot[bot] <148525504+hyperswitch-bot[bot]@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -379,6 +379,7 @@ services:
     environment:
       - "discovery.type=single-node"
       - OPENSEARCH_INITIAL_ADMIN_PASSWORD=0penS3arc#
+      - LOG_LEVEL=DEBUG
     profiles:
       - olap
     ports:
