ci: use `taiki-e/install-action` instead of `baptiste0928/cargo-install` to install supported tools

--- a/.github/workflows/CI-push.yml
+++ b/.github/workflows/CI-push.yml
@@ -67,9 +67,10 @@ jobs:
           save-if: ${{ github.event_name == 'push' }}
 
       - name: Install cargo-hack
-        uses: baptiste0928/cargo-install@v2.2.0
+        uses: taiki-e/install-action@v2.41.10
         with:
-          crate: cargo-hack
+          tool: cargo-hack
+          checksum: true
 
       - name: Deny warnings
         shell: bash
@@ -127,14 +128,16 @@ jobs:
           components: clippy
 
       - name: Install cargo-hack
-        uses: baptiste0928/cargo-install@v2.2.0
+        uses: taiki-e/install-action@v2.41.10
         with:
-          crate: cargo-hack
+          tool: cargo-hack
+          checksum: true
 
       # - name: Install cargo-nextest
-      #   uses: baptiste0928/cargo-install@v2.2.0
+      #   uses: taiki-e/install-action@v2.41.10
       #   with:
-      #     crate: cargo-nextest
+      #     tool: cargo-nextest
+      #     checksum: true
 
       - uses: Swatinem/rust-cache@v2.7.3
         with:
