--- a/.github/workflows/create-hotfix-tag.yml
+++ b/.github/workflows/create-hotfix-tag.yml
@@ -23,10 +23,10 @@ jobs:
           token: ${{ steps.generate_token.outputs.token }}
 
       - name: Install git-cliff
-        uses: baptiste0928/cargo-install@v2.2.0
+        uses: taiki-e/install-action@v2.41.10
         with:
-          crate: git-cliff
-          version: 1.2.0
+          tool: git-cliff@2.4.0
+          checksum: true
 
       - name: Check if the input is valid hotfix branch
         shell: bash
