--- a/.github/workflows/release-nightly-version-reusable.yml
+++ b/.github/workflows/release-nightly-version-reusable.yml
@@ -51,7 +51,7 @@ jobs:
           fi
 
       # Pulling latest changes in case pre-release steps push new commits
-      - name: Pull allowed branch 
+      - name: Pull allowed branch
         shell: bash
         run: git pull
 
@@ -61,10 +61,10 @@ jobs:
           toolchain: stable
 
       - name: Install git-cliff
-        uses: baptiste0928/cargo-install@v2.2.0
+        uses: taiki-e/install-action@v2.41.10
         with:
-          crate: git-cliff
-          version: 1.4.0
+          tool: git-cliff@2.4.0
+          checksum: true
 
       - name: Obtain previous and next tag information
         shell: bash
