--- a/.github/workflows/migration-check.yaml
+++ b/.github/workflows/migration-check.yaml
@@ -25,7 +25,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres
+        image: "postgres:alpine"
         env:
           POSTGRES_PASSWORD: postgres
         options: >-
