--- a/.github/workflows/postman-collection-runner.yml
+++ b/.github/workflows/postman-collection-runner.yml
@@ -1,10 +1,11 @@
 name: Run postman tests
 
 on:
-  workflow_dispatch:
   pull_request:
+
   merge_group:
-    types: [checks_requested]
+    types:
+      - checks_requested
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
