--- a/.github/workflows/postman-collection-runner.yml
+++ b/.github/workflows/postman-collection-runner.yml
@@ -26,7 +26,7 @@ jobs:
 
     services:
       redis:
-        image: "redis"
+        image: "redis:alpine"
         options: >-
           --health-cmd "redis-cli ping"
           --health-interval 10s
@@ -35,7 +35,7 @@ jobs:
         ports:
           - 6379:6379
       postgres:
-        image: "postgres:14.5"
+        image: "postgres:alpine"
         env:
           POSTGRES_USER: db_user
           POSTGRES_PASSWORD: db_pass
