--- a/.github/workflows/CI-pr.yml
+++ b/.github/workflows/CI-pr.yml
@@ -29,6 +29,8 @@ env:
   RUST_BACKTRACE: short
   # Use `sccache` for caching compilation artifacts
   RUSTC_WRAPPER: sccache
+  # PR originated from same repository
+  IS_PR_FROM_SAME_REPO: ${{ github.event.pull_request.head.repo.full_name == github.event.pull_request.base.repo.full_name }}
 
 jobs:
   formatting:
@@ -36,7 +38,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Generate a token
-        if: ${{ github.event.pull_request.head.repo.full_name == github.event.pull_request.base.repo.full_name }}
+        if: ${{ env.IS_PR_FROM_SAME_REPO == 'true' }}
         id: generate_token
         uses: actions/create-github-app-token@v1
         with:
@@ -44,7 +46,7 @@ jobs:
           private-key: ${{ secrets.HYPERSWITCH_BOT_APP_PRIVATE_KEY }}
 
       - name: Checkout repository with token
-        if: ${{ github.event.pull_request.head.repo.full_name == github.event.pull_request.base.repo.full_name }}
+        if: ${{ env.IS_PR_FROM_SAME_REPO == 'true' }}
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
@@ -52,7 +54,7 @@ jobs:
           token: ${{ steps.generate_token.outputs.token }}
 
       - name: Checkout repository for fork
-        if: ${{ github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name }}
+        if: ${{ env.IS_PR_FROM_SAME_REPO == 'false' }}
         uses: actions/checkout@v4
 
       - name: Install Rust
@@ -62,12 +64,12 @@ jobs:
           components: rustfmt
 
       - name: Check formatting for forked pull requests
-        if: ${{ github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name }}
+        if: ${{ env.IS_PR_FROM_SAME_REPO == 'false' }}
         shell: bash
         run: cargo +nightly fmt --all --check
 
       - name: Run formatter
-        if: ${{ github.event.pull_request.head.repo.full_name == github.event.pull_request.base.repo.full_name }}
+        if: ${{ env.IS_PR_FROM_SAME_REPO == 'true' }}
         shell: bash
         run: |
           cargo +nightly fmt --all
@@ -204,7 +206,7 @@ jobs:
 
     steps:
       - name: Generate a token
-        if: ${{ github.event.pull_request.head.repo.full_name == github.event.pull_request.base.repo.full_name }}
+        if: ${{ env.IS_PR_FROM_SAME_REPO == 'true' }}
         id: generate_token
         uses: actions/create-github-app-token@v1
         with:
@@ -212,11 +214,11 @@ jobs:
           private-key: ${{ secrets.HYPERSWITCH_BOT_APP_PRIVATE_KEY }}
 
       - name: Checkout repository for fork
-        if: ${{ (github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name) }}
+        if: ${{ env.IS_PR_FROM_SAME_REPO == 'false' }}
         uses: actions/checkout@v4
 
       - name: Checkout repository with token
-        if: ${{ (github.event.pull_request.head.repo.full_name == github.event.pull_request.base.repo.full_name) }}
+        if: ${{ env.IS_PR_FROM_SAME_REPO == 'true' }}
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
@@ -272,7 +274,7 @@ jobs:
         run: cargo clippy --all-features --all-targets
 
       - name: Check Cargo.lock changed
-        if: ${{ (github.event.pull_request.head.repo.full_name == github.event.pull_request.base.repo.full_name) }}
+        if: ${{ env.IS_PR_FROM_SAME_REPO == 'true' }}
         shell: bash
         run: |
           if ! git diff --quiet --exit-code -- Cargo.lock ; then
