ci: update job ID of stable toolchain check workflow

--- a/.github/workflows/CI-pr.yml
+++ b/.github/workflows/CI-pr.yml
@@ -200,7 +200,7 @@ jobs:
   #       with:
   #         command: check ${{ matrix.checks }}
 
-  test:
+  check-stable:
     name: Run tests on stable toolchain
     runs-on: hyperswitch-runners
 
