--- a/.github/workflows/CI-push.yml
+++ b/.github/workflows/CI-push.yml
@@ -122,7 +122,7 @@ jobs:
   #       with:
   #         command: check ${{ matrix.checks }}
 
-  test:
+  check-stable:
     name: Run tests on stable toolchain
     runs-on: ubuntu-latest
 
