--- a/.github/workflows/CI-push.yml
+++ b/.github/workflows/CI-push.yml
@@ -39,7 +39,13 @@ jobs:
 
   check-msrv:
     name: Check compilation on MSRV toolchain
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.runner }}
+
+    strategy:
+      fail-fast: true
+      matrix:
+        runner:
+          - ubuntu-latest
 
     steps:
       - name: Checkout repository
@@ -108,7 +114,13 @@ jobs:
 
   test:
     name: Run tests on stable toolchain
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.runner }}
+
+    strategy:
+      fail-fast: true
+      matrix:
+        runner:
+          - ubuntu-latest
 
     steps:
       - name: Checkout repository
