--- a/crates/common_utils/Cargo.toml
+++ b/crates/common_utils/Cargo.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 license.workspace = true
 
 [features]
+keymanager = ["keymanager_mtls", "dep:router_env"]
 keymanager_mtls = ["reqwest/rustls-tls"]
 signals = ["dep:signal-hook-tokio", "dep:signal-hook", "dep:tokio", "dep:router_env", "dep:futures"]
 async_ext = ["dep:async-trait", "dep:futures"]
