feat(connector): [RazorPay] Add new connector and Implement payment flows for UPI payment method (#5200)
Co-authored-by: AkshayaFoiger <akshaya.shankar@juspay.in>
Co-authored-by: hyperswitch-bot[bot] <148525504+hyperswitch-bot[bot]@users.noreply.github.com>

--- a/crates/router/tests/connectors/sample_auth.toml
+++ b/crates/router/tests/connectors/sample_auth.toml
@@ -240,3 +240,9 @@ api_key="API Key"
 
 [bamboraapac]
 api_key="API Key"
+
+[razorpay]
+api_key="API Key"
+key1 = "Merchant id"
+api_secret = "Razorpay Id"
+key2 = "Razorpay Secret"
