--- a/crates/connector_configs/toml/development.toml
+++ b/crates/connector_configs/toml/development.toml
@@ -1170,6 +1170,13 @@ api_key="key"
 brand_id="Brand ID"
 destination_account_number="Destination Account Number"
 
+[razorpay]
+[razorpay.upi]
+  payment_method_type = "upiCollect"
+[razorpay.connector_auth.BodyKey]
+api_key="Razorpay Id"
+key1 = "Razorpay Secret"
+
 [mollie]
 [[mollie.credit]]
   payment_method_type = "Mastercard"
