--- a/crates/openapi/Cargo.toml
+++ b/crates/openapi/Cargo.toml
@@ -12,4 +12,9 @@ serde_json = "1.0.115"
 utoipa = { version = "4.2.0", features = ["preserve_order", "preserve_path_order", "time"] }
 
 api_models = { version = "0.1.0", path = "../api_models", features = ["frm", "payouts", "openapi"] }
-common_utils = {version = "0.1.0", path = "../common_utils"}
+common_utils = { version = "0.1.0", path = "../common_utils" }
+router_env = { version = "0.1.0", path = "../router_env" }
+
+[features]
+v2 = ["api_models/v2"]
+default = []
