--- a/crates/router/Cargo.toml
+++ b/crates/router/Cargo.toml
@@ -31,6 +31,7 @@ payouts = ["api_models/payouts", "common_enums/payouts", "hyperswitch_domain_mod
 payout_retry = ["payouts"]
 recon = ["email", "api_models/recon"]
 retry = []
+v2 = ["api_models/v2"]
 
 [dependencies]
 actix-cors = "0.6.5"
@@ -67,7 +68,7 @@ mime = "0.3.17"
 nanoid = "0.4.0"
 num_cpus = "1.16.0"
 once_cell = "1.19.0"
-openidconnect = "3.5.0" # TODO: remove reqwest
+openidconnect = "3.5.0"                                                                                                      # TODO: remove reqwest
 openssl = "0.10.64"
 qrcode = "0.14.0"
 rand = "0.8.5"
@@ -122,7 +123,6 @@ router_derive = { version = "0.1.0", path = "../router_derive" }
 router_env = { version = "0.1.0", path = "../router_env", features = ["log_extra_implicit_fields", "log_custom_entries_to_extra"] }
 scheduler = { version = "0.1.0", path = "../scheduler", default-features = false }
 storage_impl = { version = "0.1.0", path = "../storage_impl", default-features = false }
-openapi = { version = "0.1.0", path = "../openapi", optional = true }
 erased-serde = "0.4.4"
 quick-xml = { version = "0.31.0", features = ["serialize"] }
 rdkafka = "0.36.2"
