--- a/docker/vector/vector.yaml
+++ b/docker/vector/vector.yaml
@@ -30,25 +30,25 @@ transforms:
       };
       log({"log": ., "type": "individual"}, rate_limit_secs:0);
 
-  buffer_each_log_type:
-    type: reduce
-    inputs:
-      - init_sessionizer_vars
-    group_by:
-      - log.log_type
-      - log.merchant_id
-      - log.payment_id
-      - log.attempt_id
-      - log.refund_id
-      - log.dispute_id
-    merge_strategies:
-      log: retain
-    expire_after_ms: 3000
+  # buffer_each_log_type:
+  #   type: reduce
+  #   inputs:
+  #     - init_sessionizer_vars
+  #   group_by:
+  #     - log.log_type
+  #     - log.merchant_id
+  #     - log.payment_id
+  #     - log.attempt_id
+  #     - log.refund_id
+  #     - log.dispute_id
+  #   merge_strategies:
+  #     log: retain
+  #   expire_after_ms: 3000
 
   concat_all_log_types:
     type: reduce
     inputs:
-      - buffer_each_log_type
+      - init_sessionizer_vars
     group_by:
       - log.merchant_id
       - log.payment_id
