--- a/config/config.example.toml
+++ b/config/config.example.toml
@@ -575,6 +575,7 @@ merchant_name = "HyperSwitch"
 [generic_link.payout_link.enabled_payment_methods]
 card = "credit,debit"
 
+#Payout Method Filters Based on Country and Currency
 [payout_method_filters.adyenplatform]
 sepa = { country = "ES,SK,AT,NL,DE,BE,FR,FI,PT,IE,EE,LT,LV,IT,CZ,DE,HU,NO,PL,SE,GB,CH" , currency = "EUR,CZK,DKK,HUF,NOK,PLN,SEK,GBP,CHF" }
 
