--- a/config/deployments/production.toml
+++ b/config/deployments/production.toml
@@ -96,7 +96,7 @@ worldline.base_url = "https://eu.sandbox.api-ingenico.com/"
 worldpay.base_url = "https://try.access.worldpay.com/"
 zen.base_url = "https://api.zen.com/"
 zen.secondary_base_url = "https://secure.zen.com/"
-zsl.base_url = "https://api.prodoffalb.net/"
+zsl.base_url = "https://apirh.prodoffalb.net/ecp"
 threedsecureio.base_url = "https://service.3dsecure.io"
 netcetera.base_url = "https://{{merchant_endpoint_prefix}}.3ds-server.prev.netcetera-cloud-payment.ch"
 
