--- a/config/config.example.toml
+++ b/config/config.example.toml
@@ -416,9 +416,10 @@ discord_invite_url = "https://www.example.com/" # Discord invite url for hypersw
 card.credit = { connector_list = "stripe,adyen,cybersource,bankofamerica" }           # Mandate supported payment method type and connector for card
 wallet.paypal = { connector_list = "adyen" }                                          # Mandate supported payment method type and connector for wallets
 pay_later.klarna = { connector_list = "adyen" }                                       # Mandate supported payment method type and connector for pay_later
-bank_debit.ach = { connector_list = "gocardless" }                                    # Mandate supported payment method type and connector for bank_debit
-bank_debit.becs = { connector_list = "gocardless" }                                   # Mandate supported payment method type and connector for bank_debit
-bank_debit.sepa = { connector_list = "gocardless" }                                   # Mandate supported payment method type and connector for bank_debit
+bank_debit.ach = { connector_list = "gocardless,adyen" }
+bank_debit.becs = { connector_list = "gocardless" }
+bank_debit.bacs = { connector_list = "adyen" }
+bank_debit.sepa = { connector_list = "gocardless,adyen" }                                  # Mandate supported payment method type and connector for bank_debit
 bank_redirect.ideal = { connector_list = "stripe,adyen,globalpay" }                   # Mandate supported payment method type and connector for bank_redirect
 bank_redirect.sofort = { connector_list = "stripe,adyen,globalpay" }
 wallet.apple_pay = { connector_list = "stripe,adyen,cybersource,noon,bankofamerica" }
